Fixed text overflow ellipsis on menu item hover

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -698,8 +698,6 @@ button:hover {
 }
 .body_container main .menu_restaurant .menu_item .menu_text {
   width: 100%;
-  text-overflow: ellipsis;
-  overflow: hidden;
 }
 .body_container main .menu_restaurant .menu_item span {
   transition: transform 0.5s ease-in-out;
@@ -719,6 +717,7 @@ button:hover {
   transition: clip-path 0.5s ease-in-out, -webkit-clip-path 0.5s ease-in-out;
   position: absolute;
   right: 0;
+  pointer-events: none;
 }
 .body_container main .menu_restaurant .menu_item .menu_icon i {
   background-color: white;
@@ -739,8 +738,14 @@ button:hover {
 }
 .body_container main .menu_restaurant .menu_item:hover .menu_text,
 .body_container main .menu_restaurant .menu_item:active .menu_text {
-  width: calc(100% - 60px);
+  max-width: calc(100% - 100px);
   white-space: nowrap;
+}
+.body_container main .menu_restaurant .menu_item:hover .menu_text h3, .body_container main .menu_restaurant .menu_item:hover .menu_text p,
+.body_container main .menu_restaurant .menu_item:active .menu_text h3,
+.body_container main .menu_restaurant .menu_item:active .menu_text p {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .body_container main .menu_restaurant .menu_item:hover span,
 .body_container main .menu_restaurant .menu_item:active span {
